Fixes for latest hyprland

--- a/user/files/hyprland.conf
+++ b/user/files/hyprland.conf
@@ -13,68 +13,186 @@ exec-once = [workspace special:ffpreload silent] /usr/lib/firefox/firefox about:
 # prevent wallpaper animation glitch
 animation = layers, 0
 
-layerrule = blur,waybar
-layerrule = blur,display-switcher
-layerrule = blur,power-menu
-layerrule = blur,swaync-control-center
-layerrule = blur,swaync-notification-window
-layerrule = noanim,swaync-control-center
+layerrule = blur true, match:namespace waybar
+layerrule = blur true, match:namespace display-switcher
+layerrule = blur true, match:namespace power-menu
+layerrule = blur true, match:namespace swaync-control-center
+layerrule = blur true, match:namespace swaync-notification-window
+layerrule = no_anim true, match:namespace swaync-control-center
 
 # layer shadows
 monitor=,addreserved,-6,0,0,0
-layerrule = ignorealpha 0.84,waybar
-layerrule = ignorealpha 0.84,display-switcher
-layerrule = ignorealpha 0.84,power-menu
-layerrule = ignorealpha 0.83,swaync-control-center
-layerrule = ignorealpha 0.83,swaync-notification-window
+layerrule = ignore_alpha 0.84, match:namespace waybar
+layerrule = ignore_alpha 0.84, match:namespace display-switcher
+layerrule = ignore_alpha 0.84, match:namespace power-menu
+layerrule = ignore_alpha 0.83, match:namespace swaync-control-center
+layerrule = ignore_alpha 0.83, match:namespace swaync-notification-window
 
-windowrulev2 = opacity 0.999, class:.*
-windowrulev2 = forcergbx, title:Picture-in-Picture
+windowrule {
+    name = global-opacity
+    match:class = .*
+    opacity = 0.999
+}
+
+windowrule {
+    name = pip
+    match:title = Picture-in-Picture
+    force_rgbx = true
+    float = yes
+}
 
 # Primenote
-windowrulev2 = float, class:^(primenote)$
-windowrulev2 = size 600 420, class:^(primenote)$
-windowrulev2 = pin, class:^(primenote)$
+windowrule {
+    name = primenote
+    match:class = ^(primenote)$
+    float = yes
+    size = 600 420
+    pin = true
+}
 
 # Plasmoids
-windowrulev2 = noanim, class:org.kde.plasmawindowed
-windowrulev2 = noinitialfocus, class:org.kde.plasmawindowed
-windowrulev2 = float, class:org.kde.plasmawindowed
-windowrulev2 = float, class:org.kde.plasmashell
-windowrulev2 = move onscreen cursor, title:^(plasmawindowed)$
-windowrulev2 = nofocus, noblur, noanim, noborder, noshadow, title:^(plasmawindowed)$
+windowrule {
+    name = plasmoid-warmup
+    match:class = org.kde.plasmawindowed
+    workspace = special:warmup silent
+}
+
+windowrule {
+    name = plasmawindowed
+    match:class = org.kde.plasmawindowed
+    no_anim = true
+    no_initial_focus = true
+    float = yes
+}
+
+windowrule {
+    name = plasmashell
+    match:class = org.kde.plasmashell
+    float = yes
+}
+
+windowrule {
+    name = plasmawindowed-hide
+    match:title = ^(plasmawindowed)$
+    move = onscreen cursor
+    no_focus = true
+    no_blur = true
+    no_anim = true
+    border_size = 0
+    no_shadow = true
+}
 
 # Launcher
-# windowrulev2 = noborder, class:ulauncher
-windowrulev2 = stayfocused, class:ulauncher
+windowrule {
+    name = ulauncher
+    match:class = ulauncher
+    stay_focused = true
+}
 
 # Floating Dialogs
-windowrulev2 = float, class:^$,title:^$
-windowrulev2 = float, class:org.kde.bluedevilwizard
-windowrulev2 = float, class:1Password
-windowrulev2 = float, class:pavucontrol-qt
-windowrulev2 = float, class:variety
-windowrulev2 = float, class:nwg-displays
-windowrulev2 = float, class:org.kde.polkit-kde-authentication-agent-1
-windowrulev2 = float, class:org.kde.gwenview
-windowrulev2 = float, class:^(org.freedesktop.impl.portal.*)$
-windowrulev2 = float, title:^(Open File)$
-windowrulev2 = float, title:^(Open Folder)$
-windowrulev2 = float, title:^(Save As)$
-windowrulev2 = float, title:^(Save File)$
-windowrulev2 = float, title:^(Copying — Dolphin)$
-windowrulev2 = float, title:^(Picture-in-Picture)$
+windowrule {
+    name = float-empty
+    match:class = ^$
+    match:title = ^$
+    float = yes
+}
+
+windowrule {
+    name = float-bluetooth
+    match:class = org.kde.bluedevilwizard
+    float = yes
+}
+
+windowrule {
+    name = float-1password
+    match:class = 1Password
+    float = yes
+}
+
+windowrule {
+    name = float-pavucontrol
+    match:class = pavucontrol-qt
+    float = yes
+}
+
+windowrule {
+    name = float-variety
+    match:class = variety
+    float = yes
+}
+
+windowrule {
+    name = float-nwg-displays
+    match:class = nwg-displays
+    float = yes
+}
+
+windowrule {
+    name = float-polkit
+    match:class = org.kde.polkit-kde-authentication-agent-1
+    float = yes
+}
+
+windowrule {
+    name = float-gwenview
+    match:class = org.kde.gwenview
+    float = yes
+}
+
+windowrule {
+    name = float-portal
+    match:class = ^(org.freedesktop.impl.portal.*)$
+    float = yes
+}
+
+windowrule {
+    name = float-open-file
+    match:title = ^(Open File)$
+    float = yes
+}
+
+windowrule {
+    name = float-open-folder
+    match:title = ^(Open Folder)$
+    float = yes
+}
+
+windowrule {
+    name = float-save-as
+    match:title = ^(Save As)$
+    float = yes
+}
+
+windowrule {
+    name = float-save-file
+    match:title = ^(Save File)$
+    float = yes
+}
+
+windowrule {
+    name = float-dolphin-copy
+    match:title = ^(Copying — Dolphin)$
+    float = yes
+}
 
 # Variety Images
-windowrulev2 = noborder, title:^(Variety Images)$
-windowrulev2 = pin, title:^(Variety Images)$
-windowrulev2 = size 100% 120, title:^(Variety Images)$
-windowrulev2 = move 0 100%-120, title:^(Variety Images)$
+windowrule {
+    name = variety-images
+    match:title = ^(Variety Images)$
+    border_size = 0
+    pin = true
+    size = 100% 120
+    move = 0 100%-120
+}
 
 # Sidebars (Firefox SSB)
-windowrulev2 = float, title:.*SIDEBAR_.*
-windowrulev2 = noborder, title:.*SIDEBAR_.*
-windowrulev2 = rounding 0, title:.*SIDEBAR_.*
+windowrule {
+    name = sidebars
+    match:title = .*SIDEBAR_.*
+    float = yes
+    border_size = 0
+    rounding = 0
+}
 
 # Set programs that you use
 $terminal = wezterm
@@ -100,6 +218,10 @@ input {
     sensitivity = 0
 }
 
+cursor {
+    inactive_timeout = 20
+}
+
 general {
     gaps_in = 5
     gaps_out = 20
@@ -107,7 +229,6 @@ general {
     col.active_border = $color1Alpha $color2Alpha 45deg
     col.inactive_border = $backgroundAlpha
     layout = dwindle
-    cursor_inactive_timeout = 20
     resize_on_border = true
 }
 
@@ -121,7 +242,6 @@ decoration {
         xray = true
         popups = true
     }
-    drop_shadow = yes
     shadow {
         enabled = true
         range = 8
@@ -147,15 +267,16 @@ dwindle {
 }
 
 master {
-    new_is_master = true
+    new_status = master
 }
 
 plugin:touch_gestures {
     sensitivity = 4.0
 }
 
+gesture = 3, horizontal, workspace
+
 gestures {
-    gesture = 3, horizontal, workspace
     workspace_swipe_cancel_ratio = 0.15
 }
 
@@ -179,10 +300,14 @@ plugin {
 
 # this is turned back off after plugins load
 debug {
-    suppress_errors = true
+    suppress_errors = false
 }
 
-windowrulev2 = nomaximizerequest, class:.*
+windowrule {
+    name = no-maximize
+    match:class = .*
+    suppress_event = maximize
+}
 
 $mainMod = SUPER
 
@@ -198,7 +323,7 @@ bind = $mainMod SHIFT, Space, togglefloating,
 bind = $mainMod, D, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, O, shadeactivewindow, chromakey
+bind = $mainMod, O, darkwindow:shadeactive, chromakey
 bind = $mainMod, N, exec, pnote -c new
 bind = $mainMod SHIFT, N, exec, bash -c 'f="$(hyprctl activewindow -j | jq -r .title)"; rm "$HOME/.config/primenote/notes/$f.txt"'
 
@@ -210,11 +335,11 @@ bind = $mainMod SHIFT, D, exec, pypr toggle messages
 
 # hyprexpo/HyCov Keybinds
 bind = $mainMod, tab, hyprexpo:expo, toggle
-bind = ALT, tab, hycov:toggleoverview
-bind = ALT, left, hycov:movefocus, l
-bind = ALT, right, hycov:movefocus, r
-bind = ALT, up, hycov:movefocus, u
-bind = ALT, down, hycov:movefocus, d
+# bind = ALT, tab, hycov:toggleoverview
+# bind = ALT, left, hycov:movefocus, l
+# bind = ALT, right, hycov:movefocus, r
+# bind = ALT, up, hycov:movefocus, u
+# bind = ALT, down, hycov:movefocus, d
 
 # Move focus
 bind = $mainMod, left, movefocus, l
@@ -302,6 +427,6 @@ binds {
 # Screenshot keys: window, monitor, region
 bind = $mainMod, PRINT, exec, hyprshot -m window
 bind = , PRINT, exec, hyprshot -m output
-bind = $shiftMod, PRINT, exec, hyprshot -m region
+bind = $mainMod SHIFT, PRINT, exec, hyprshot -m region
 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
