--- a/user/files/pyprland.toml
+++ b/user/files/pyprland.toml
@@ -21,7 +21,7 @@ title = "re:.*SIDEBAR_MESSAGES.*"
 animation = "fromRight"
 process_tracking = false
 size = "850px 100%"
-margin = "0px"
+margin = 0
 offset = "200%"
 multi = false
 smart_focus = false
