--- a/user/files/theme/colors-hyprland.conf
+++ b/user/files/theme/colors-hyprland.conf
@@ -3,7 +3,7 @@ $background = rgb({background.strip})
 $backgroundAlpha = rgba({background.strip}db)
 $wallpaper = {wallpaper}
 
-windowrulev2 = plugin:shadewindow chromakey bkg=[{background.red} {background.green} {background.blue}],fullscreen:0
+windowrule = darkwindow:shade chromakey bkg=[{background.red} {background.green} {background.blue}], match:fullscreen 0
 
 $color0 = rgb({color0.strip})
 $color1 = rgb({color1.strip})
